se agrega videos

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
   
-  background-color: rgb(212, 212, 212);
+  background-color: red;
 }
 
 .contenedor-padre {
@@ -11,8 +11,9 @@ body {
 
 .capitulo-info {
   margin-left: 30px;
-  background-color: white;
+  background-color: rgb(3, 7, 28);
   padding: 10px;
+  color: white;
 }
 
 .img-serie{
@@ -27,4 +28,11 @@ body {
 
 .marvel {
   width: 100px;
+  background-color: white;
+  padding:2px ;
+}
+
+.videos {
+  display: flex;
+  
 }
