--- a/src/estilos/Header.css
+++ b/src/estilos/Header.css
@@ -1,10 +1,10 @@
 .header-componente {
     height: 200px;
     width: 100%;
-    background-image: url('https://www.xtrafondos.com/descargar.php?id=3427&resolucion=4300x2418');
+    background-image: url('https://www.todofondos.net/wp-content/uploads/fondo-de-pantalla-de-marvel-para-escritorio-1024x576.jpg');
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: 0px -30px;
+    background-position: 0px -40px;
     display: flex;
     align-items: center;
     text-align: center;
