--- a/src/estilos/Header.css
+++ b/src/estilos/Header.css
@@ -1,4 +1,5 @@
 .header-componente {
+    box-sizing: border-box;
     height: 200px;
     width: 100%;
     background-image: url('https://www.todofondos.net/wp-content/uploads/fondo-de-pantalla-de-marvel-para-escritorio-1024x576.jpg');
@@ -10,5 +11,17 @@
     text-align: center;
     justify-content: center;
     color: white;
-    background-color: red;
+    background-color: rgb(0, 0, 0);
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    padding: 30px;
+}
+
+.header-componente-img {
+    width: 200px;
+    background-color: white;
+    padding: 5px;
+    cursor: pointer;
 }
